...
        <variable
            name="vm"
            type="com.seunghyun.linememo.ui.edit.EditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text"
...
            android:id="@+id/contentEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:fadeScrollbars="false"
            android:gravity="top"
            android:hint="@string/content"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/picture"
            app:layout_constraintBottom_toTopOf="@id/imagesRecyclerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contentEditText" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/dividerColor"
            app:layout_constraintBottom_toBottomOf="@id/pictureText"
            app:layout_constraintEnd_toStartOf="@id/addImageButton"
            app:layout_constraintStart_toEndOf="@id/pictureText"
            app:layout_constraintTop_toTopOf="@id/pictureText" />

        <TextView
            android:id="@+id/addImageButton"
            android:layout_width="wrap_content"
...
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_add_black_24dp"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/add_images"
            android:textColor="?android:attr/textColorPrimary"
            android:visibility="@{vm.isEditing ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/pictureText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/pictureText" />

...
