...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <EditText
        android:id="@+id/linkEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/link_prefix"
        android:importantForAutofill="no"
        android:inputType="textUri" />
</LinearLayout>
