...
        <variable
            name="vm"
            type="com.seunghyun.linememo.ui.list.ListViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:onRefreshListener="@{() -> vm.updateAllMemos()}"
        app:refreshing="@{vm.refreshing}">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:onClick="@{() -> vm.onAddButtonClick()}"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/memoRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingTop="@dimen/space_between_memos"
                    android:paddingBottom="@dimen/space_between_memos"
                    app:items="@{vm.memos}"
...
