...
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/edit"
        app:showAsAction="ifRoom"
        tools:ignore="PrivateResource" />

    <item
        android:id="@+id/saveButton"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/save"
        app:showAsAction="always" />

    <item
        android:id="@+id/deleteButton"
...
